[project]
name = "mov"
version = "0.2.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
mov-ping = 'mov.cli:ping'

[project.urls]
Homepage = "https://github.com/hamsunwoo/movie"
Issues = "https://github.com/hamsunwoo/movie/issues"
